added twitter bot

--- a/agent/.gitignore
+++ b/agent/.gitignore
@@ -1,8 +1,8 @@
-*.ts
-!index.ts
-!character.ts
-.env
-*.env
-.env*
-/data
-/generatedImages
+# *.ts
+# !index.ts
+# !character.ts
+# .env
+# *.env
+# .env*
+# /data
+# /generatedImages
